# pyslap-backend

./: .CLAUDE  .CLAUDE.md  .funcignore  .gitignore  .gitmodules  CLAUDE.md  function_app.py  instructions.md  pyproject.toml  temp_database  test_json.py  test_matchmaking.db  verify_fix.py
.agents/memory/: MEMORY.md
.agents/rules/: README.md  architecture.md  guidelines.md  instructions.md  personas.md  project.md  references.md  roadmap.md
.claude/: settings.json
.docs/: audit.md  audit_report.md  game_suggestions.txt  roadmap.md  update_loop_analysis.md
azure/: azure_database.py  azure_entrypoint.py  azure_scheduler.py
games/: battleship.py  battleship_client.py  client_base.py  rps.py  rps_client.py  run_rps.py
gcp/: __init__.py  cloud_functions_entrypoint.py  cloud_tasks_scheduler.py  firestore_database.py
local/: app.py  local_entrypoint.py  local_scheduler.py  local_server.py  sql_database.py
pyslap/: README.md  config.py
pyslap/core/: engine.py  game_rules.py  security.py  test_utils.py  validator.py
pyslap/interfaces/: database.py  entrypoint.py  receiver.py  scheduler.py
pyslap/models/: domain.py
pyslap_backend.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_battleship.py  test_cleanup.py  test_engine.py  test_enum.py  test_gcp_imports.py  test_local_app.py  test_local_entrypoint.py  test_loop_lock.py  test_matchmaking.py  test_matchmaking_concurrency.py  test_real_match.py  test_rps.py  test_scheduler_control.py  test_security.py  test_security_hardening.py  test_sqlite_cas.py  test_transactions.py  test_validator.py
