[tool.pyright]
include = ["pyslap", "tests", "local", "games", "azure"]
extraPaths = ["."]

[tool.pytest.ini_options]
pythonpath = ["."]

[project]
name = "pyslap-backend"
version = "0.1.0"
description = "PYSLAP backend"
dependencies = [
    "azure-functions",
    "azure-data-tables",
    "azure-storage-queue",
]

[tool.setuptools]
packages = ["pyslap", "azure", "games", "local", "tests"]

