[tool.pyright]
include = ["pyslap", "tests", "local", "games"]
extraPaths = ["."]

[tool.pytest.ini_options]
pythonpath = ["."]

[project]
name = "pyslap-backend"
version = "0.1.0"
description = "PYSLAP backend"
dependencies = [
    "fastapi>=0.135.1",
    "httpx>=0.28.1",
    "pydantic-settings>=2.13.1",
    "pyjwt>=2.11.0",
    "uvicorn>=0.41.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
